# mini-is

./: CMakeLists.txt  INSTRUCTION_SET.txt  README.md  conanfile.txt
inc/mini-is/: handle_instruction.h  instruction.h  memory.h  system.h
integration_test/src/: main.cc
pub_inc/mini-is/: mini-is.h
src/: handle_instruction.c  instruction.c  main.c  memory.c  mini-is.c  system.c
test/src/: handle_instruction_test.cc  main.cc  memory_test.cc  system_test.cc
